adding random shells

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
         </div>
         <div id="game-over">
             <h1>Game over</h1>
-            <h2>You have reached level <span> 1</span></h2>
+            <h2>You have reached level : <span> 1</span></h2>
             <img src="images/tomb.png" alt="tomb" id="tomb">
+            <button id ="try-again">Try again !</button>
         </div>
         <canvas width="1130px" height="680px" id="canvas"></canvas>
     </div>
