--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
     <div id="background">
         <div id="btn">
-            <button id="start">Play Fish Fighter !</button>
+            <button id="start">Play Fish Fighter</button>
         </div>
         <div id="game-over">
             <h1>Game over</h1>
-            <h2>You have reached level : <span> 1</span></h2>
+            <h2></h2>
+            <button id ="try-again">Try again</button>
             <img src="images/tomb.png" alt="tomb" id="tomb">
-            <button id ="try-again">Try again !</button>
         </div>
         <canvas width="1130px" height="680px" id="canvas"></canvas>
     </div>
