fix mooving background, finish style screen1

--- a/index.html
+++ b/index.html
@@ -10,16 +10,30 @@
 
 <body>
     <div id="background">
-        <div id="btn">
+        <canvas width="1130px" height="680px" id="canvas"></canvas>
+        <div id="screen1">
+            <div id="directions">
+                <p>Hey you!</p>
+                <p>Could you help me to cross safely the ocean?</p>
+                <p>If you achieve to collect two
+                    shells, press the spacebar and see what's happening !</p>
+                <div id="icones">
+                    <div class = "icone">
+                        <img src="images/arrows.png" alt="arrows" width="50px" id="arrows"> Move player
+                    </div>
+                    <div class = "icone">
+                        <img src="images/space.png" alt="space" width="40px" id="space"> Call friends
+                    </div>
+                </div>
+            </div>
             <button id="start">Play Fish Fighter</button>
         </div>
         <div id="game-over">
             <h1>Game over</h1>
             <h2></h2>
-            <button id ="try-again">Try again</button>
+            <button id="try-again">Try again</button>
             <img src="images/tomb.png" alt="tomb" id="tomb">
         </div>
-        <canvas width="1130px" height="680px" id="canvas"></canvas>
     </div>
     <script src="class.js"></script>
     <script src="index.js"></script>
