style screens and add team valor

--- a/index.html
+++ b/index.html
@@ -12,25 +12,29 @@
     <div id="background">
         <canvas width="1130px" height="680px" id="canvas"></canvas>
         <div id="screen1">
+            <img src="images/logo.png" alt="logo" id="logo">
             <div id="directions">
-                <p>Hey you!</p>
+                <p>Hey human!</p>
                 <p>Could you help me to cross safely the ocean?</p>
                 <p>If you achieve to collect two
                     shells, press the spacebar and see what's happening !</p>
                 <div id="icones">
-                    <div class = "icone">
-                        <img src="images/arrows.png" alt="arrows" width="50px" id="arrows"> Move player
+                    <div class="icone">
+                        <img src="images/arrows.png" alt="arrows" width="30px" id="arrows"> Move player
                     </div>
-                    <div class = "icone">
-                        <img src="images/space.png" alt="space" width="40px" id="space"> Call friends
+                    <div class="icone">
+                        <img src="images/space.png" alt="space" width="20px" id="space"> Call friends
                     </div>
                 </div>
             </div>
-            <button id="start">Play Fish Fighter</button>
+            <button id="start">Play</button>
+            <img src="images/fish.png" alt="fish" width="120px" id="fish1">
         </div>
         <div id="game-over">
-            <h1>Game over</h1>
-            <h2></h2>
+            <div id="end-box">
+                <h1>Game over</h1>
+                <h2></h2>
+            </div>
             <button id="try-again">Try again</button>
             <img src="images/tomb.png" alt="tomb" id="tomb">
         </div>
