--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width" , initial-scale=1.0>
     <title>Fish Fighter</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="images/greenfish.png"/>
 </head>
 
 <body>
@@ -28,7 +29,7 @@
                 </div>
             </div>
             <button id="start">Play</button>
-            <img src="images/fish.png" alt="fish" width="120px" id="fish1">
+            <img src="images/fish.png" alt="fish" width="120px">
         </div>
         <div id="game-over">
             <div id="end-box">
