--- a/index.html
+++ b/index.html
@@ -6,12 +6,20 @@
     <meta name="viewport" content="width=device-width" , initial-scale=1.0>
     <title>Fish Fighter</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="images/greenfish.png"/>
+    <link rel="icon" type="image/png" href="images/greenfish.png" />
 </head>
 
 <body>
     <div id="background">
         <canvas width="1130px" height="680px" id="canvas"></canvas>
+        <div id="controls">
+            <img src="images/arrow-left.png" alt="arrow-left" id="arrow-left">
+            <div id="top-bottom-arrows">
+                <img src="images/arrow-up.png" alt="arrow-up" id="arrow-up">
+                <img src="images/arrow-down.png" alt="arrow-down" id="arrow-down">
+            </div>
+            <img src="images/arrow-right.png" alt="arrow-right" id="arrow-right">
+        </div>
         <div id="screen1">
             <img src="images/logo.png" alt="logo" id="logo">
             <div id="directions">
